<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_photo"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/selector_itme_layout"
    android:clickable="true"
    android:orientation="horizontal"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/iv_photo_anim"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/time_text"
                android:textColor="@color/font_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/font_color"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/address_text"
                android:textColor="@color/font_light"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="9dp"
                android:gravity="center"
                android:text="@string/address_unknown"
                android:textColor="@color/font_color"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>