<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    android:orientation="vertical"
    android:padding="5dp" >

    <!-- 下一次巡查时间提示 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_nexttime_layout"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center"
            android:text="@string/next_time"
            android:textColor="@color/font_light"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="9dp"
            android:gravity="center"
            android:text="@string/time"
            android:textColor="@color/green"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/last_record"
        android:textColor="@color/font_light"
        android:textSize="15sp" />

    <!-- 显示最后一次巡查拍摄的图片 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_photo_show"
            android:background="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_line" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_video_show" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/divider_line" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_text_show" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_select"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_stroke_btn"
        android:gravity="center"
        android:text="@string/record_text"
        android:textColor="@drawable/selector_yellow_text"
        android:textSize="16sp" />

</LinearLayout>